fix more docs with latest sentence grammar and word changes

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -173,7 +173,7 @@ If you specify only the number 1 (kut), it acts like the indefinite
 article ("a/an" in English) but this is usually omitted.
 
 <HisyeoTabs>
-  <p>kut ënpokon "one burp" or "a burp"</p>
+  <p>kut ënpukun "one burp" or "a burp"</p>
 </HisyeoTabs>
 
 The language allows you to omit any sense of plurality and this frees you from
@@ -231,16 +231,16 @@ wëxön/ʒʇɋ̃ı).
 | Earth   | ![The Blue Marble, Apollo 17, December 1972](https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/The_Blue_Marble_%28remastered%29.jpg/240px-The_Blue_Marble_%28remastered%29.jpg)                                                                                                                                                                                                  | Wednesday | <HisyeoText kind='latin'>lono zöi</HisyeoText>     | <HisyeoText kind='abugida'>lono zöi</HisyeoText>     |
 | Mars    | ![Mars, as captured by the Hope orbiter](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png/240px-Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png)                                                                                                                                                                          | Thursday  | <HisyeoText kind='latin'>lono cınöpu</HisyeoText>  | <HisyeoText kind='abugida'>lono cınöpu</HisyeoText>  |
 | Jupiter | ![This true-color simulated view of Jupiter is composed of 4 images taken by NASA's Cassini spacecraft on December 7, 2000 - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Jupiter_in_true_color.jpg/248px-Jupiter_in_true_color.jpg)                                                                                                                             | Friday    | <HisyeoText kind='latin'>lono zingu</HisyeoText>   | <HisyeoText kind='abugida'>lono zingu</HisyeoText>   |
-| Saturn  | ![Original Caption Released with Image: NASA's Voyager 2 took this 'true color' photograph of Saturn on July 21, 1981, when the spacecraft was 33.9 million kilometers (21 million miles) from the planet. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Saturn_With_Rhea_and_Dione_%28true_color%29.jpg/179px-Saturn_With_Rhea_and_Dione_%28true_color%29.jpg) | Saturday  | <HisyeoText kind='latin'>lono onpulë</HisyeoText>  | <HisyeoText kind='abugida'>lono onpulë</HisyeoText>  |
+| Saturn  | ![Original Caption Released with Image: NASA's Voyager 2 took this 'true color' photograph of Saturn on July 21, 1981, when the spacecraft was 33.9 million kilometers (21 million miles) from the planet. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Saturn_With_Rhea_and_Dione_%28true_color%29.jpg/179px-Saturn_With_Rhea_and_Dione_%28true_color%29.jpg) | Saturday  | <HisyeoText kind='latin'>lono unpol</HisyeoText>  | <HisyeoText kind='abugida'>lono unpol</HisyeoText>  |
 | Uranus  | ![This picture of Uranus in true color was compiled from images returned Jan. 17, 1986, by the narrow-angle camera of Voyager 2. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Uranus_true_colour.jpg/240px-Uranus_true_colour.jpg)                                                                                                                             | Sunday    | <HisyeoText kind='latin'>lono xolxili</HisyeoText> | <HisyeoText kind='abugida'>lono xolxili</HisyeoText> |
 
 In order to indicate a specific day use one of the demonstrative pronouns
 (övo/ɽıɤ, ulyö/ɽ͊ʃɀı, onö/ɽƨı). Otherwise, a weekday
 (or really any use of lono) is either one or many unspecified days. You
-can use a day as a condition in a win prepositional phrase:
+can use a day as a condition in a hön prepositional phrase:
 
 <HisyeoTabs>
-  <p>win xokön lono xolxili, nü lı si lö pı xopëk müt motüo sënzö</p>
+  <p>hön xokön lono xolxili, ü nü lı si lö pı xopëk müt motüo sënzö</p>
   <em>"Every Sunday, we used to go to grandpa's"</em>
 </HisyeoTabs>
 
@@ -280,12 +280,12 @@ WIP Translation
 :::
 
 <HisyeoTabs>
-  <p>cö son dus lono lı yünyoü ü wuto tiso,
-    wuto nonkü, wuto toü, moliyü wuto önsu,
-    ü möi dizel lı yünyoü cö son dus kut,
-    ü yök wuto düi do hoi düi dus tukwos lono,
-    lëkın ü üsën zoston hoi xokön nonkü,
-    cö eswen kut lono lı yünyoü</p>
+  <p>yünyoü son dus lono ü wuto tiso,</p>
+  <p>wuto nonkü, wuto toü, moliyü wuto önsu,</p>
+  <p>ü möi dizel yünyoü son dus kut,</p>
+  <p>ü yök wuto düi do lon düi dus tukwos lono,</p>
+  <p>lëkın hoi üsën zoston do di hoi xokön üsën nonkü,</p>
+  <p>ü wuto düi yünyoü eswen kut lono</p>
 </HisyeoTabs>
 
 [Wikipedia](https://en.wikipedia.org/wiki/Thirty_Days_Hath_September)
@@ -311,7 +311,7 @@ object of a hoi preposition.
 
 Specifying an exact date involves using ordinals for the day, the week day
 terms, and ordinals for the months. When specifying what date a weekday has, a
-relative clause is used to treat the following  phrase as an
+relative clause is used to treat the following phrase as an
 [appositive](https://en.wikipedia.org/wiki/Apposition).
 
 <HisyeoTabs>
@@ -344,12 +344,13 @@ in addition to the date.
 
 <HisyeoTabs>
   <p>noyo
-     hoi lono zingu do lı lono kinsë yë wuto son
+     hoi lono zingu do lı lono kinsë yë wuto son,
      lı cok müt nıwos.
      <em>Friday, the 15th of March, I am departing for home.</em></p>
 </HisyeoTabs>
 
-Each segment of the date is isolated by the yë genitive particle.
+Similar to English, the appositive "the 15th of March" must be closed by a comma
+to return to the main sentence clause for the remaining consituents.
 
 :::info Conversation Practice
 
@@ -357,21 +358,21 @@ Each segment of the date is isolated by the yë genitive particle.
     <TabItem value="latin" label="Latin" default>
       <dl>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='latin'>noi Lovoiyel, yünyoü ü nimü cö mikdol zık yë sıskın?</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>noi Lovoiyel, nimü yünyoü mikdol zık yë sıskın.</HisyeoText></dd>
         <dd><em>Raphael, how many siblings do you have?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd><HisyeoText kind='latin'>yünyoü ü %%noyo cö düi sıskın moskül cö kut sıskın wohi.</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>noyo yünyoü düi sıskın moskül moliyü kut sıskın wohi.</HisyeoText></dd>
         <dd><em>I have two brothers and one sister.</em></dd>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='latin'>nokdo zık ü loı?</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>niün lı nokdo zık.</HisyeoText></dd>
         <dd><em>How old are they?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd><HisyeoText kind='latin'>önsu üsën ü nokdo yë sıskın wohi noyo Somonvo.</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>sıskın wohi noyo Somonvo lı önsu üsën .</HisyeoText></dd>
         <dd><em>My sister Samantha is 11 years old.</em></dd>
-        <dd><HisyeoText kind='latin'>zıyön üsën moliyü düi dus kut üsën ü nokdo yë sıskın %%moskül %%noyo.</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>lı zıyön üsën moliyü düi dus kut üsën yë nokdo ü sıskın moskül noyo.</HisyeoText></dd>
         <dd><em>My brother's ages are 14 and 21.</em></dd>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='latin'>moliyü lono zık ü lono lözic nimü?</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>moliyü lözic nimü hoi lono zık?</HisyeoText></dd>
         <dd><em>And when is your birthday?</em></dd>
         <dt>Lovoiyel</dt>
         <dd><HisyeoText kind='latin'>lono düi dus tiso yë wuto toü.</HisyeoText></dd>
@@ -381,21 +382,21 @@ Each segment of the date is isolated by the yë genitive particle.
     <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
       <dl>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='abugida'>noi Lovoiyel, yünyoü ü nimü cö mikdol zık yë sıskın?</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>noi Lovoiyel, nimü yünyoü mikdol zık yë sıskın.</HisyeoText></dd>
         <dd><em>Raphael, how many siblings do you have?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd><HisyeoText kind='abugida'>yünyoü ü %%noyo cö düi sıskın moskül cö kut sıskın wohi.</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>noyo yünyoü düi sıskın moskül moliyü kut sıskın wohi.</HisyeoText></dd>
         <dd><em>I have two brothers and one sister.</em></dd>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='abugida'>nokdo zık ü loı?</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>niün lı nokdo zık.</HisyeoText></dd>
         <dd><em>How old are they?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd><HisyeoText kind='abugida'>önsu üsën ü nokdo yë sıskın wohi noyo Somonvo.</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>sıskın wohi noyo Somonvo lı önsu üsën .</HisyeoText></dd>
         <dd><em>My sister Samantha is 11 years old.</em></dd>
-        <dd><HisyeoText kind='abugida'>zıyön üsën moliyü düi dus kut üsën ü nokdo yë sıskın %%moskül %%noyo.</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>lı zıyön üsën moliyü düi dus kut üsën yë nokdo ü sıskın moskül noyo.</HisyeoText></dd>
         <dd><em>My brother's ages are 14 and 21.</em></dd>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='abugida'>moliyü lono zık ü lono lözic nimü?</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>moliyü lözic nimü hoi lono zık?</HisyeoText></dd>
         <dd><em>And when is your birthday?</em></dd>
         <dt>Lovoiyel</dt>
         <dd><HisyeoText kind='abugida'>lono düi dus tiso yë wuto toü.</HisyeoText></dd>
