--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -138,7 +138,7 @@ action of the verb phrase occurred a certain number of times.
 
 <HisyeoTabs>
   <p>si kut mokon tölki ü noyo cö piek potuk yë öni mulö <em>"I have only once eaten pizza"</em></p>
-  <p>küu düi yön ü nimü cö sikot hoköli win xokön lono. <em>You should use your toothbrush twice a day.</em></p>
+  <p>küu düi yön ü nimü cö sikot hoköli hön xokön lono. <em>You should use your toothbrush twice a day.</em></p>
 </HisyeoTabs>
 
 ### Distributive
