--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -206,14 +206,14 @@ some of the senses of the word "without".
 
 ### Context or Condition
 
-The <HisyeoWord is='win'/> particle precedes this noun phrase.
+The <HisyeoWord is='hön'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent an overarching topic, contextual
 detail, or a condition for the underlying sentence. In English, this represents
 some of the senses of the words "regarding", "given", "as for", and "when".
 
 <HisyeoTabs>
-  <p>yünyoü ü noyo cö sölü win zowopü ılık. <em>"I have a question regarding your earlier answers."</em></p>
+  <p>yünyoü ü noyo cö sölü hön zowopü ılık. <em>"I have a question regarding your earlier answers."</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -223,7 +223,7 @@ topic/context that is something other than the marked noun phrase. In English,
 this represents some of the senses of the word "regardless".
 
 <HisyeoTabs>
-  <p>si mokon ü umo Depölo cö ünvünö nomü win yök longı loı. <em>"Deborah ate the broccoli regardless its color."</em></p>
+  <p>si mokon ü umo Depölo cö ünvünö nomü hön yök longı loı. <em>"Deborah ate the broccoli regardless its color."</em></p>
 </HisyeoTabs>
 
 ### Counter-Agent
