add custom abugida font

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -90,7 +90,7 @@ that you'll need to count all the way up to a trillion.
       <thead>
         <tr>
             <td><strong>Number</strong></td>
-            <td><strong>ɂ́ɟɀʇɽı</strong></td>
+            <td><strong kind="abugida">ɂ́ɟɀʇɽı</strong></td>
         </tr>
       </thead>
       <tbody>
@@ -189,7 +189,7 @@ If you supply a number on the right-hand side of any noun phrase (in the
 modifier position), it indicates which specific value in a list of values, also
 known as the *placement*. These are called **Ordinal Numbers**.
 
-| English    | Hisyëö     | ɂ́ɟɀʇɽı  |
+| English    | Hisyëö     | <span kind="abugida">ɂ́ɟɀʇɽı</span>  |
 | :--------- | :----------------------------------------------- | ----------------------------------------------- |
 | Zeroth     | <HisyeoText kind='latin'>xünyu</HisyeoText>      | <HisyeoText kind='abugida'>xünyu</HisyeoText>    |
 | First      | <HisyeoText kind='latin'>kut</HisyeoText>        | <HisyeoText kind='abugida'>kut</HisyeoText>      |
