convert block of text nodes into a tabs element

--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -79,21 +79,22 @@ wet so that you can begin your immersion training.
 
 The following are some of the current established expressions that Hisyëans use
 in day-to-day conversation:
-- <HisyeoText kind='latin'>voxo. <em>woah!</em></HisyeoText>
-- <HisyeoText kind='latin'>nü küu lı lö. <em>Let's go!</em></HisyeoText>
-- <HisyeoText kind='latin'>nimü lı pı zık. <em>How are you doing?</em></HisyeoText>
-- <HisyeoText kind='latin'>noyo lı pı xön. <em>I am good.</em></HisyeoText>
-- <HisyeoText kind='latin'>lono nimü lı si gö pı zık. <em>How has your day been?</em></HisyeoText>
-- <HisyeoText kind='latin'>pı yök xön. <em>Not good.</em></HisyeoText>
-- <HisyeoText kind='latin'>zık lı yonlüs. <em>What's wrong?</em></HisyeoText>
-- <HisyeoText kind='latin'>lı yök sonkon <em>It doesn't matter.</em></HisyeoText>
-- <HisyeoText kind='latin'>...ci. <em>...agree?</em></HisyeoText>
-- <HisyeoText kind='latin'>löicök. <em>definitely!</em></HisyeoText>
-- <HisyeoText kind='latin'>küu yünlön noyo. <em>Sorry!</em></HisyeoText>
-- <HisyeoText kind='latin'>küu lı yök cinzon. <em>Don't worry!</em></HisyeoText>
-- <HisyeoText kind='latin'>lı yök ixölö. <em>It's not a problem.</em></HisyeoText>
-- <HisyeoText kind='latin'>noyo köi di do hoi limien ko. <em>Can I come in?</em></HisyeoText>
-
+<HisyeoTabs>
+<p>voxo. <em>woah!</em></p>
+<p>nü küu lı lö. <em>Let's go!</em></p>
+<p>nimü lı pı zık. <em>How are you doing?</em></p>
+<p>noyo lı pı xön. <em>I am good.</em></p>
+<p>lono nimü lı si gö pı zık. <em>How has your day been?</em></p>
+<p>pı yök xön. <em>Not good.</em></p>
+<p>zık lı yonlüs. <em>What's wrong?</em></p>
+<p>lı yök sonkon <em>It doesn't matter.</em></p>
+<p>...ci. <em>...agree?</em></p>
+<p>löicök. <em>definitely!</em></p>
+<p>küu yünlön noyo. <em>Sorry!</em></p>
+<p>küu lı yök cinzon. <em>Don't worry!</em></p>
+<p>lı yök ixölö. <em>It's not a problem.</em></p>
+<p>noyo köi di do hoi limien ko. <em>Can I come in?</em></p>
+</HisyeoTabs>
 :::
 
 ## Pronunciation
