Add more noun and measurement details

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -559,20 +559,28 @@ proper spellings would be:
 
 ### Mass/Volume/Weight
 
-For mass, assume that measurements are in grams or pounds (depending on where
-you are in the world). Add <HisyeoText kind='latin'>cënpö</HisyeoText> for kilograms or tons.
+A unit of mass is 1 gram. Add <HisyeoWord is='cënpö'/> for kilograms or <HisyeoWord is='cüti'/> for
+milligrams.
 
 > It is widely recommended that adults consume 15-35 grams of fiber daily, although many Americans fall short.
 > 
 > —Casey Seiden, Verywell Health, 3 May 2024
 
 <HisyeoTabs>
-  <p>pı nulto pësnëhot vos umo dës xonluk mokon zöhün doi dës siüvo gıtno dus tiü moliyü son dus tiü öni kut yë küsowi hoi xokön lono lëkın mikdol yë ëto umo Umelıkın lı püzök onö</p>
+  <p>pı nulto pësnëhot vos umo dës xonluk mokon zöhün doi gıtno dus tiü moliyü son dus tiü öni kut yë küsowi hoi xokön lono lëkın mikdol yë ëto umo Umelıkın lı püzök onö</p>
 </HisyeoTabs>
 
 ### Length/Width/Height
 
-For mass, assume that measurements are in meters or feet (depending on where you
-are in the world). Add <HisyeoText kind='latin'>cënpö</HisyeoText> for kilometers or miles.
+A unit of length is 1 meter. <HisyeoWord is='cënpö'/> for kilometers or <HisyeoWord is='cüti'/> for
+millimeters.
+
+> In computer simulations, their average charge was strong enough to lift 100 pollen grains at least six millimeters in less than a second.
+> 
+> —Will Sullivan, Smithsonian Magazine, 2 Aug. 2024
+
+<HisyeoTabs>
+  <p>hön tüek yë wëilun ü cıngi mëtliös yünyoü zötëstö len oxon do ëo lö pı mulö ölë viyën volo zënsi inpoli lon toü öni kut cüti yë lomö hoi mënüs en kut sünkon.</p>
+</HisyeoTabs>
 
 <HisyeoTooltip />
