--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -117,6 +117,10 @@ The <HisyeoWord is='hoi'/> particle precedes this noun phrase.
 This role is used for NPs that represent where or when the action occurs. In
 English, this represents some of the senses of the words "in", "at", and "on".
 
+The counterpart of this particle is <HisyeoWord is='lon'/> for distance and
+duration. Unlike that particle, when you provide an amount of time to <HisyeoWord is='hoi'/> it
+means the length of time that it took to achieve the task specified in the rest of the predicate.
+
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the location or time of the
 committed act of the predicate or that the act itself was committed but at a
