more grammar fixes to noun doc

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -184,8 +184,10 @@ beneficiary/purpose that is something other than the marked noun phrase.
 The <HisyeoWord is='nënko'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent what caused the action to occur or a
-past reason that led to the action. In English, this represents some of the
-senses of the word "because".
+past reason that led to the action. Not to be confused with the causer of the
+action (<HisyeoWord is='ü'/>), this NP would represent a broader sense including
+what caused the causer. In English, this represents some of the senses of the
+word "because". 
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the cause of the committed
@@ -217,7 +219,15 @@ detail, or a condition for the underlying sentence. In English, this represents
 some of the senses of the words "regarding", "given", "as for", and "when".
 
 <HisyeoTabs>
-  <p>yünyoü ü noyo cö sölü hön zowopü ılık. <em>"I have a question regarding your earlier answers."</em></p>
+  <p>noyo yünyoü sölü hön zuwopü ılık. <em>"I have a question regarding your earlier answers."</em></p>
+</HisyeoTabs>
+
+Also, when you would like to utilize an adjective complement to complete the
+meaning of a subject complete (<HisyeoWord is='lı'/>), you would place the
+complement in a <HisyeoWord is='hön'/> NP.
+
+<HisyeoTabs>
+  <p>noyo lı xowosë hön vos nimü köto si ulyö. <em>"I am happy that you said that"</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -227,7 +237,7 @@ topic/context that is something other than the marked noun phrase. In English,
 this represents some of the senses of the word "regardless".
 
 <HisyeoTabs>
-  <p>si mokon ü umo Depölo cö ünvünö nomü hön yök longı loı. <em>"Deborah ate the broccoli regardless its color."</em></p>
+  <p>umo Depölo mokon si ünvünö nomü hön yök longı nı. <em>"Deborah ate the broccoli regardless its color."</em></p>
 </HisyeoTabs>
 
 ### Counter-Agent
@@ -238,6 +248,11 @@ This role is used for NPs that either represent a special kind of goal/agent for
 verbs that indicates an opposing agent for verbs that indicate an action that is
 *oppositional* (where both sides are engaging in an opposing action). In
 English, this represents some of the senses of the word "against".
+
+<HisyeoTabs>
+  <p>nı lı tüu kutın hön do oütö pı ximu vio woyü dën pono woyü. <em>"It is hard work to sail against the wind."</em></p>
+  <p>nimü dën völni yë göcidon ko. <em>"Are you against freedom of choice?"</em></p>
+</HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the counter-agent of the
@@ -250,7 +265,13 @@ The <HisyeoWord is='oldıs'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent proof or an information source that the
 specified action is known or believed to have occurred, is occurring, or will
-occur. In English, this represents some of the senses of the phrase "or so".
+occur. In English, this represents some of the senses of the phrases "or so",
+"per", and "according to". 
+
+<HisyeoTabs>
+  <p>hoi mötö xopëk onö ü niün lı si tönkö mötö oldıs vos dizel köto. <em>"He was burned in the fire or so they say"</em></p>
+  <p>oldıs yöcno kon köson ü voko ünidü pılit di ülgükin hoi düi dus nonkü suhot. <em>"According to the directions, the glue takes 24 hours to dry"</em></p>
+</HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the proof/source of the
@@ -265,6 +286,12 @@ This role is used for NPs that represent the time or space that the action
 occurs within. This role is related to the location/time role but it represents
 finite physical space or actual time periods. In English, this represents some
 of the senses of the word "for".
+
+<HisyeoTabs>
+  <p>noyo köi dëko lon yoüti öni kut cënpö yë zoük. <em>"I can see for kilometres"</em></p>
+  <p>nimü lı gö lon üsën zık. <em>"How old are you?"</em></p>
+  <p>niün köntësto vio köto lon yoüti lono hön döcui. <em>They argued for days over a toy.</em></p>
+</HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the distance or duration of the
@@ -320,6 +347,11 @@ This role is used for a NP that is describing the preceding noun or verb phrase
 in some contextually dependent manner. In English, this represents some of the
 senses of the word "of".
 
+<HisyeoTabs>
+  <p>niün pı xoinpo lı vonmot yë kon konzilü umo. <em>"He seemed devoid of human feelings."</em></p>
+  <p>pëmon in cukto köi di niltügu hoi ozüul woküt hön pëmon yë möi düi zomo. <em>"The contract can be terminated at any time with the agreement of both parties."</em></p>
+</HisyeoTabs>
+
 This particle isn't used with the negatitive particle <HisyeoWord is='yök'/>
 because it's meant to describe nouns through associating other nouns and there's
 already an existing way to describe zero nouns (<HisyeoWord is='xünyu'/>). You can
@@ -341,12 +373,14 @@ use in a sentence where you use that verb.
 
 When a modifier acts as a noun, it means an uncountable quality and/or degree of
 being a given state. Like the affix "-ness" in English. One way of making a noun
-out of a modifier is to provide it as the nucleus of a preposition phrase.
-Preposition particles always take the word is immediately following it as a noun
-derivation of that word and it is the nucleus of the preposition phrase.
+out of a modifier is to provide it as the nucleus of a verb or a preposition
+phrase. Verbs and preposition particles always take the word is immediately
+following it as a noun derivation of that word and it is the nucleus of the
+preposition phrase (as long as it's a content word, other prepositions can cause
+argument to be skipped).
 
 <HisyeoTabs>
-  <p>pön ü wölık cö küyö</p>
+  <p>wölık nëlö pön küyö <em>"Black clouds cause sadness."</em></p>
 </HisyeoTabs>
 
 
@@ -359,7 +393,7 @@ useful: it allows you to describe a quality with some modifiers of its own. One
 of the most common usages is when adding a degree to a modifier:
 
 <HisyeoTabs>
-  <p>töxücı pümi yë ıwotë ëto</p>
+  <p>töxütsı pümi yë ıwotë ëto</p>
 </HisyeoTabs>
 
 
@@ -389,7 +423,7 @@ expressed by the inner sentence but referred holisitically as an object in the
 outer sentence.
 
 <HisyeoTabs>
-  <p>ëo govon ölë noyo ü <strong>do</strong> cöüvon cö micin. <em>"to cook fish makes me disgusted"</em></p>
+  <p>lı ëo govon ölë noyo ü <strong>do</strong> cöüvon micin. <em>"Cooking fish makes me disgusted"</em></p>
 </HisyeoTabs>
 
 
@@ -403,8 +437,8 @@ of a loose relationship than using a noun clause as a gerund. "acts/matters of
 eating meat" means something different from "eating meat".
 
 <HisyeoTabs>
-    <p>toüyen ü noyo cö do mokon cö oksün.</p>
-    <p>toüyen ü noyo cö kon mokon oksün.</p>
+    <p>noyo toüyen do mokon oksün.</p>
+    <p>noyo toüyen kon mokon oksün.</p>
 </HisyeoTabs>
 
 
@@ -424,8 +458,8 @@ clause as their object and this form allows for a complete sentence to be
 included as that object.
 
 <HisyeoTabs>
-  <p>völun ü noyo cö vos völun ü nimü cö noyo <em>"I want you to want me"</em></p>
-  <p>xiwon ü noyo cö vos suhot tiü <em>"I wish that it was 5 o'clock"</em></p>
+  <p>noyo völun vos nimü völun noyo <em>"I want you to want me"</em></p>
+  <p>noyo xiwon vos lı suhot tiü <em>"I wish that it was 5 o'clock"</em></p>
 </HisyeoTabs>
 
 
